--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -36,8 +36,8 @@ DIRS= ${VE_SUITE_HOME}/VEOpen \
       ${VE_SUITE_HOME}/VE_Xplorer \
       ${VE_SUITE_HOME}/VE_Builder/Translator \
       ${VE_SUITE_HOME}/VE_Builder/Preprocessor \
-      ${VE_SUITE_HOME}/VE_Builder/Utilities \
-      ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI 
+      ${VE_SUITE_HOME}/VE_Builder/vtkTo3DTexture/tcGUI \
+      ${VE_SUITE_HOME}/VE_Builder/Utilities
 #      ${VE_SUITE_HOME}/VE_Builder/WX_Translator
 
 # -----------------------------------------------------------------------------
