moved more files into the util lib so that builder projects will just have to link in the util lib and not other libs.

--- a/VE_Xplorer/VE_UtilLib.vcproj
+++ b/VE_Xplorer/VE_UtilLib.vcproj
@@ -283,6 +283,9 @@
 				RelativePath=".\cfdAccessoryFunctions.cxx">
 			</File>
 			<File
+				RelativePath="..\VE_Builder\Translator\cfdGrid2Surface.cpp">
+			</File>
+			<File
 				RelativePath=".\cfdVTKFileHandler.cxx">
 			</File>
 			<File
