--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -365,6 +365,9 @@
 		<Filter
 			Name="headers"
 			Filter=".h">
+			<File
+				RelativePath="..\VE_Conductor\impl\VjObs_i.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
