--- a/VE_Conductor/VE_ConductorLib.vcproj
+++ b/VE_Conductor/VE_ConductorLib.vcproj
@@ -74,7 +74,7 @@
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
-			Name="Debug|Win32"
+			Name="dbg|Win32"
 			OutputDirectory="$(VE_SUITE_HOME)/lib/win32"
 			IntermediateDirectory=".\VE_ConductorLib\$(ConfigurationName)"
 			ConfigurationType="2"
@@ -94,7 +94,7 @@
 				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="3"
 				SuppressStartupBanner="TRUE"
-				DebugInformationFormat="2"
+				DebugInformationFormat="3"
 				CompileAs="0"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
@@ -151,7 +151,7 @@
 			<File
 				RelativePath=".\Framework\package.cpp">
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="dbg|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
@@ -160,7 +160,7 @@
 			<File
 				RelativePath=".\Framework\string_ops.cpp">
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="dbg|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
