"fix" for bug dealing w/ writing out transient files correctly so that they are viewable in native (osg/pf) viewers...App doesn't use cfdNodeTraverser or cfdWriteNodeTraverser but instead cfdRawNodeTraverser and cfdRawNodeWriteTraverser.

--- a/VE_SceneGraph/Makefile.scenegraphlib
+++ b/VE_SceneGraph/Makefile.scenegraphlib
@@ -58,6 +58,7 @@ SRCS=\
    cfdNode.cxx \
    cfdNodeTraverser.cxx \
    cfdPfSceneManagement.cxx \
+   cfdRawNodeTraverser.cxx \
    cfdSceneNode.cxx \
    cfdSequence.cxx \
    cfdSwitch.cxx \
