everyone's graphical plugins will now be broken. to get plugins working you will have to use new notation as listed in cfdVEBaseClass.h. This change was necessary so that our application will shutdown down cleanly. this was never an issue before because juggler never really shutdown cleanly. now that juggler does that exposed errors in our code. another side affect of this change is that NO wx code can be used in xplorer code. it appears that if you don't have a wx app that your app won't clean up after itself even if wx/string is the only code being used in the app. this may be a miss understanding on my part but now xplorer is not dependent on wx anymore which should be a good thing.

--- a/VE_Xplorer/VE_Xplorer.vcproj
+++ b/VE_Xplorer/VE_Xplorer.vcproj
@@ -277,9 +277,19 @@
 			Filter=".cpp">
 			<File
 				RelativePath=".\cfdApp.cxx">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\cfdAppWrapper.cxx">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\cfdExecutive.cxx">
@@ -307,15 +317,35 @@
 			</File>
 			<File
 				RelativePath=".\cfdVEXplorer.cxx">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\cfdVjObsWrapper.cxx">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\VEOpen\skel\moduleC.cpp">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\VEOpen\skel\moduleS.cpp">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\Ve_ce\Network_Exec.cpp">
@@ -335,12 +365,27 @@
 			</File>
 			<File
 				RelativePath="..\VE_Conductor\impl\VjObs_i.cxx">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\VEOpen\skel\VjObsC.cpp">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\VEOpen\skel\VjObsS.cpp">
+				<FileConfiguration
+					Name="tao_pf_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
